HUGE maj video games

--- a/html/projects/video-games/chloe-au-musee.html
+++ b/html/projects/video-games/chloe-au-musee.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="stylesheet" href="../../../css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 15 + .1em);"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 21 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>Chloé au Musée</h1>
     </section>
@@ -39,7 +40,7 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
-            <p><b>#Musée des Beaux Arts</b> <b>#Online mobile first</b></p>
+            <p><b>2022</b> <b>Musée des Beaux Arts</b> <b>Online mobile first</b> <b>Phaser 3</b></p>
             <p>During the project "Rêve et Ville" ("Dream and City") at the beginning of year 2022, I had the opportunity to create an interactive experience about the Musée des Beaux-Arts of Bordeaux. We worked in team of five and I specialized in the JS development using Phaser3. It was a completely new tech for me and I learned a lot in little time. Then again, the freeCodeCamp JS formation was pretty useful.</p>
             <img src="../../../img/video-games/chloe-au-musee/cam-gameplay1.gif" style="width: 100%;">
             <p>One of the peculiarities of this game was that it needed to be playable from a phone since it was made for the visitors of the museum (who didn't have a computer access). So we had to make sure that it was as responsive as possible.</p>
@@ -51,10 +52,16 @@
                 <img src="../../../img/video-games/chloe-au-musee/chloe-au-musee-phone2.jpg" style="width: 24%;">
             </div>
         </div>
-        <div class="div-column" style="width: 30%; margin-left : 10px;">
-            <p>Phaser 3</p>
-            <a class="btn1" href="https://chloe-au-musee.netlify.app/" target="_blank">Discover the game</a>
 
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">PLAY</p>
+                </div>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                    <a class="external-link" href="https://chase-tag.herokuapp.com/" target="_blank">Discover the game</a>
+                </div>
+            </div>
         </div>
     </section>
 
