--- a/html/projects/video-games/golden-pumpkin.html
+++ b/html/projects/video-games/golden-pumpkin.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="stylesheet" href="../../../css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 12 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>Golden Pumpkin</h1>
     </section>
@@ -38,21 +39,28 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-            <div class="div-column">
-                <p><b>#Unity</b> <b>#Android</b></p>
-                <p>In October 2021, we had two weeks to realise a video game on the theme of Halloween. The first week, as we were building the foundations of our game, we learned the basics of UML modelisation (in our case, how to conceive class diagrams, transition state diagrams). This game was made on Unity. We were five per groups and I was mainly focusing on the C# development.</p>
-                <p>Now imagine yourself on the evening of Halloween in a small town that every year organise a contest for the kid with the most sweets in the city (winner's price being a beautiful golden pumpkin). As the dignified heir of your grandmother, ten times winner in her youth, you need to be the best.</p>
-                <div class="div-row" style="width: 100%;">
-                    <img src="../../../img/video-games/golden-pumpkin/gp-gameplay2.gif" style="width: 49%;">
-                    <img src="../../../img/video-games/golden-pumpkin/gp-gameplay3.gif" style="width: 49%;">
+        <div class="div-column" style="width: 70%;">
+            <p><b>2021</b> <b>Unity</b> <b>Android</b></p>
+            <p>In October 2021, we had two weeks to realise a video game on the theme of Halloween. The first week, as we were building the foundations of our game, we learned the basics of UML modelisation (in our case, how to conceive class diagrams, transition state diagrams). This game was made on Unity. We were five per groups and I was mainly focusing on the C# development.</p>
+            <p>Now imagine yourself on the evening of Halloween in a small town that every year organise a contest for the kid with the most sweets in the city (winner's price being a beautiful golden pumpkin). As the dignified heir of your grandmother, ten times winner in her youth, you need to be the best.</p>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/golden-pumpkin/gp-gameplay1.gif" style="width: 49%;">
+                <img src="../../../img/video-games/golden-pumpkin/gp-gameplay2.gif" style="width: 49%;">
+            </div>
+            <p>Golden Pumpkin is a tower-defense game that alterns between two phases, one where you can spend sweets to upgrade your hut or buy special attack and the other where you need to resist the ennemies assault (other children are trying to steal your treasure !).</p>
+            <p>This game is available on android, windows and mac if you want to try it !</p>
+        </div>
+
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">PLAY</p>
+                </div>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content;">
+                    <a class="external-link" href="https://wolffien.itch.io/golden-pumpkin" target="_blank">Discover the game</a>
                 </div>
             </div>
-            <div class="div-column" style="width: 40%; margin-left : 10px;">
-                <img src="../../../img/video-games/golden-pumpkin/gp-gameplay1.gif">
-                <p>Golden Pumpkin is a tower-defense game that alterns between two phases, one where you can spend sweets to upgrade your hut or buy special attack and the other where you need to resist the ennemies assault (other children are trying to steal your treasure !).</p>
-                <p>This game is available on android, windows and mac if you want to try it !</p>
-                <a class="btn1" href="https://wolffien.itch.io/golden-pumpkin" target="_blank">Discover the game</a>
-            </div>
+        </div>
     </section>
 
     <section class="div-row other-projects">
