--- a/html/projects/video-games/qatp.html
+++ b/html/projects/video-games/qatp.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="stylesheet" href="../../../css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -31,7 +32,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 46 + .1em);"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 43 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>QATP</h1>
     </section>
@@ -40,34 +41,36 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
-            <p id="hashtags"><b>#Hackathon</b> <b>#Traceabilty</b> <b>#Laval Virtual</b> </p>
+            <p><b>2023</b> <b>Laval Virtual</b> <b>Hackathon</b> <b>Virtual Reality</b> <b>XR Interaction Toolkit</b></p>
             <p>In april 2023, I had the chance to take part in the Laval Virtual, a huge virtual/augmented reality event in Europe. Encouraged by our teachers back in Tarbes, we participated to the student limited time competition (fancy name for hackathon). We were against ten other teams from schools all around the world and had to conceive a whole experience / game / application in 30 hours on the theme of "Collaborative XR for industry". A secondary theme per team was also assigned and ours was "Traceabilty".</p>
             <p>Those was born Quality Assurance Test Protocol. Heavily inspired by <a href="https://keeptalkinggame.com/" target="_blank">Keep Talking and Nobody Explodes</a>, QATP is an asymetric video game where two players try to collaborate and decipher wheter or not a prosthesis is authentic and functional. One of the player is inside the virtual reality headset and can inspect the prosthesis and the other has access to a manual (paper or pdf version) with multiple informations on how to trace back the product's origins.</p>
             <p>I mainly contributed to the gameplay programming and game design side of this project. The whole thing was super stressful and an hour before the end of the time the project was absolutely broken. But we got through and delivered a playable version in which bugs were hidden enough not to be noticed.</p>
-            <iframe width="100%" height="315" src="https://www.youtube.com/embed/bRQ96djZfvw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <iframe width="100%" height="500px" src="https://www.youtube.com/embed/bRQ96djZfvw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             <h3>Winner of hackathon 2023</h3>
             <p>And we won ! I could use a lot of words to describe our joy but I'll spare you : we were super happy. I usually don't have many pictures of us making video games cause it's just us hiding in the dark behind screens but for this project we actually have tons of them. Oh, and we each won a Oculus Quest 2 which is absolutelly wonderful and means I'll be able to continue programming games in VR.</p>
             <img src="../../../img/video-games/qatp/laval-picture1.jpg" style="width: 100%;">
             <div class="div-row" style="width: 100%;">
                 <div class="div-column" style="width: 49%;">
                     <img src="../../../img/video-games/qatp/laval-picture2.jpg" style="width: 100%;">
-                    <img src="../../../img/video-games/qatp/laval-picture3.jpg" style="width: 100%; height: ;">
+                    <img src="../../../img/video-games/qatp/laval-picture3.jpg" style="width: 100%;">
                 </div>
                 <img src="../../../img/video-games/qatp/laval-trophy.jpg" style="width: 49%;">
-
             </div>
-
 
             <h3>Exhibition</h3>
             <p>By winning the hackathon, we had gained the right to expose our game on the Laval Virtual exhibition. For four days, we were able to show QATP to professionals and the general public while working out the bugs on the side. This was a wonderful occasion and we met many many great people I will miss a lot.</p>
             <p>A final word to say a huge thank you to all the people that helped us get there. First and foremost our teachers from Tarbes, who fought hard for us to be able to participate and without whom, all this adventure would have never existed. Then thanks to TavroxGames for letting me go in such a strainous period, we had a game scheduled for release just a few weeks later but they were very understanding. Thanks to the team of Laval Virtual for their fantastic job with the event. And finally, thanks to all my fellow classmates, those who were with me at the Laval Virtual and those who couldn't but still helped from the distance.</p>
         </div>
 
-        <div class="div-column" style="width: 40%; margin-left : 50px;">
-            <p>2023 | 30 hours | Jam | Oculus Quest 2</p>
-            <p>Tools : Unity, DOTween, XR Interaction Toolkit</p>
-
-            <a class="btn1" href="https://atoxm.itch.io/dynasty" target="_blank">Discover the game</a>
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">PLAY</p>
+                </div>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content;">
+                    <a class="external-link" href="https://alvina-dr.itch.io/qatp" target="_blank">Discover the game</a>
+                </div>
+            </div>
         </div>
     </section>
 
