--- a/html/projects/video-games/thief-tales.html
+++ b/html/projects/video-games/thief-tales.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="stylesheet" href="../../../css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 16 + .1em); "></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 14 + .1em); "></div>
     <section id="landing-blog-section">
         <h1>Thief Tales</h1>
     </section>
@@ -38,19 +39,30 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-            <div class="div-column">
-                <p>The second game jam we made in collaboration with ENSEIRB was at the end of my second year of DHE. It led to the creation of Thief Tales a compilation of mini game packed inside a thief story.</p>
-                <img src="../../../img/video-games/thief-tales/tt-gameplay1.gif" style="width: 100%;">
-                <div class="div-row" style="width: 100%;">
-                    <img src="../../../img/video-games/thief-tales/tt-gameplay3.gif" style="width: 49%;">
-                    <img src="../../../img/video-games/thief-tales/tt-gameplay4.gif" style="width: 49%;">
+        <div class="div-column" style="width: 70%;">
+            <p>The second game jam we made in collaboration with ENSEIRB was at the end of my second year of DHE. It led to the creation of Thief Tales a compilation of mini game packed inside a thief story.</p>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/thief-tales/tt-gameplay1.gif" style="width: 49%;">
+                <img src="../../../img/video-games/thief-tales/tt-gameplay2.gif" style="width: 49%;">
+            </div>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/thief-tales/tt-gameplay3.gif" style="width: 49%;">
+                <img src="../../../img/video-games/thief-tales/tt-gameplay4.gif" style="width: 49%;">
+            </div>
+            <p>I mainly worked on the race game and it was super fun to do because it looked a lot like <a class="link-in-text" href="https://alvina-dr.com/html/projects/video-games/those-who-remain.html">Those Who Remain</a>, a previous game we made in school with some friends. This time it took me way less time and I knew how to proceed from the start.</p>
+            <p>I really love this jam and I'm grateful for the people I met through it.</p>
+        </div>
+
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">PLAY</p>
+                </div>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                    <a class="external-link" href="https://najouille.itch.io/thief-tales" target="_blank">Discover the game</a>
                 </div>
             </div>
-            <div class="div-column" style="width: 40%; margin-left : 10px;">
-                <img src="../../../img/video-games/thief-tales/tt-gameplay2.gif">
-                <p>I mainly worked on the race game and it was super fun to do because it looked a lot like Those Who Remain, a previous game we made in school with some friends. This time it took me way less time and I knew how to proceed from the start.</p>
-                <a class="btn1" href="https://najouille.itch.io/thief-tales" target="_blank">Discover the game</a>
-            </div>
+        </div>
     </section>
 
     <section class="div-row other-projects">
