--- a/html/projects/video-games/chase-tag.html
+++ b/html/projects/video-games/chase-tag.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="stylesheet" href="../../../css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -31,7 +32,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 14 + .1em);"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 13 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>Chase Tag</h1>
     </section>
@@ -39,16 +40,29 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-            <div class="div-column" style="width: 70%;">
-                <p><b>#Online multiplayer</b></p>
-                <p>In october 2022 I started making an online chase tag game after work. I had wanted to learn about multiplayer for a long time and suddendly felt like it was possible with my current knowledge. It worked pretty well pretty quickly so I started talking with a friend and we created some rules to make it funny. This game is still a work in progress but you can try a prototype by clicking on the button on the right !</p>
-                <img src="../../../img/video-games/chase-tag/ct-gameplay1.gif">
-      </div>
-            <div class="div-column" style="width: 30%; margin-left : 10px;">
-                <p>Unity, Photon Unity Networking 2</p>
-                <a class="btn1" href="https://alvina-dr.itch.io/chase-tag-online" target="_blank">Discover the game</a>
-
+        <div class="div-column" style="width: 70%;">
+            <p><b>2022-23</b> <b>Unity</b> <b>Photon Unity Networking 2</b> <b>Socket.io</b> <b>Phaser 3</b></p>
+            <p>In october 2022 I started making a chase tag game after work. I had wanted to learn about online multiplayer for a long time and suddendly felt like it was possible with my current knowledge. It worked pretty well pretty quickly so I started talking with a friend and we created some rules to make it funny.</p>
+            <p>But with other projects in the way during my vocationnal degree, the project got left behind. The idea never left though. In April 2023, after thinking about it for so long I decided to switch it directly to web instead of using Unity and then building to WebGL. The old solution was too long to test and there were huge delay between the testers.</p> 
+            <p>I had already used Phaser 3 before with <a class="link-in-text" href="https://alvina-dr.com/html/projects/video-games/chloe-au-musee.html">Chloé au Musée</a> so it was the logical way to go. For the client server communication I used Socket.io. The website is deployed on Heroku (that we had already used before during my DHE with Ruby On Rails).</p>
+            <p>The project is still in progress today and if you want to have a try, there's a link on the right to the old and new version of the chase tag.</p>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/chase-tag/chase-tag-old.gif" style="width: 49%;">
+                <img src="../../../img/video-games/chase-tag/chase-tag-new.gif" style="width: 49%;">
             </div>
+            <img >
+        </div>
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">PLAY</p>
+                </div>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                    <a class="external-link" href="https://chase-tag.herokuapp.com/" target="_blank">Discover the game</a>
+                    <a class="external-link" href="https://alvina-dr.itch.io/chase-tag-online" target="_blank" style="width: fit-content; margin: auto;">Old version</a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="div-row other-projects">
