--- a/html/projects/video-games/creeping-deck.html
+++ b/html/projects/video-games/creeping-deck.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="stylesheet" href="../../../css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -38,22 +39,26 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-            <div class="div-column" style="width: 70%;">
-                <p><b>#Unity</b> <b>#DOTween</b> <b>#Odin Inspector</b></p>
-                <p>To start off my apprenticeship at TavroxGames, I had the occasion to work on Creeping deck : Pharaoh's curse, a deckbuilding game on the theme of Egyptian mythology. I only worked three weeks on the project, mainly on FX. Things such as a text indicating the number of damage popping on the screen, the chest opening or the arrow following the mouse in fight. I also worked on making it possible to have multiple ennemies in fight.</p>
-                <div class="div-row" style="width: 100%;">
-                    <img src="../../../img/video-games/creeping-deck/cd-arrow.gif" style="width: 49%;">
-                    <img src="../../../img/video-games/creeping-deck/cd-fight.gif" style="width: 49%;">
-                </div>
-                <img src="../../../img/video-games/creeping-deck/cd-chest.gif">
-
-      </div>
-            <div class="div-column" style="width: 30%; margin-left : 10px;">
-                <p>1month / 2022-23, computer, Professional, </p>
-                <p>Tools : Unity, Blender, DOTween</p>
-                <a class="btn1" href="https://store.steampowered.com/app/2167550/Creeping_Deck_Pharaohs_Curse/" target="_blank">Discover the game</a>
-
+        <div class="div-column" style="width: 70%;">
+            <p><b>2022-23</b> <b>TavroxGames</b> <b>Unity</b> <b>DOTween</b> <b>Odin Inspector</b></p>
+            <p>To start off my apprenticeship at TavroxGames, I had the occasion to work on Creeping deck : Pharaoh's curse, a deckbuilding game on the theme of Egyptian mythology. I only worked three weeks on the project, mainly on FX. Things such as a text indicating the number of damage popping on the screen, the chest opening or the arrow following the mouse in fight. I also worked on making it possible to have multiple ennemies in fight.</p>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/creeping-deck/cd-arrow.gif" style="width: 49%;">
+                <img src="../../../img/video-games/creeping-deck/cd-fight.gif" style="width: 49%;">
             </div>
+            <img src="../../../img/video-games/creeping-deck/cd-chest.gif">
+        </div>
+
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">PLAY</p>
+                </div>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                    <a class="external-link" href="https://store.steampowered.com/app/2167550/Creeping_Deck_Pharaohs_Curse/" target="_blank">Discover the game</a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="div-row other-projects">
