--- a/html/projects/video-games/find-the-way-back.html
+++ b/html/projects/video-games/find-the-way-back.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="stylesheet" href="../../../css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 23 + .1em);"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 22 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>Find the Way Back</h1>
     </section>
@@ -39,7 +40,7 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
-            <p><b>#Puzzle</b> <b>#Mirror</b> <b>#Jam</b></p>
+            <p><b>2022</b> <b>Game jam</b> <b>Puzzle</b> <b>Unity</b></p>
             <p>This game was made in a week-end, followed by two long weeks of debug. A friend of mine had the idea to make our own game jam at home and we made the whole thing in the apartment I had at the time in Bordeaux. It was a beautiful experience, we had fun, sore backs and were giddy with Monster by the end of the first night. I remember trying to make the walking system work for fourteen hours ! At the time I didn't knew that you could use the grid to plan your movement and there was a big conflict between how physics work in Unity and how I had made it all. A good night of sleep later, it was done in one hour. Which I guess is one of the lessons that I got to experience time and time again since then : if you can't do it now, stop for today and try again tomorrow.</p>
             <p>The theme of the jam was "soédiv xuej" which would translate as "emag oediv" in english. Which is litteraly video game backward. So we had a lot of thinking about mirror and beginning and ending. Which left us with Find The Way Back.</p>
             <p>It's a puzzle game where you control two reflection of the same character. When one moves right, the other moves left. The goal of the game is to bring the two characters to the ending slates to complete the level. The game in itself is pretty simple but the levels can be quite complex.</p>
@@ -49,13 +50,18 @@
                 <img src="../../../img/video-games/find-the-way-back/ftwb-level1.gif" style="width: 49%;">
                 <img src="../../../img/video-games/find-the-way-back/ftwb-transition.gif" style="width: 49%;">
             </div>
-            <p>If you want to try the game it's available online on your browser or downloadable through the itch.io page just by clicking the button below. Hope you enjoy !</p>
-
+            <p>If you want to try the game it's available online on your browser or downloadable through the itch.io page just by clicking on the link on the right. Hope you enjoy !</p>
         </div>
-        <div class="div-column" style="width: 30%; margin-left : 10px;">
-            <p>2022 | 2 days | Game Jam</p>
-            <p>Tools : Unity</p>
-            <a class="btn1" href="https://alvina-dr.itch.io/find-the-way-back" target="_blank">Discover the game</a>
+
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">PLAY</p>
+                </div>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                    <a class="external-link" href="https://alvina-dr.itch.io/find-the-way-back" target="_blank">Discover the game</a>
+                </div>
+            </div>
         </div>
     </section>
 
