--- a/html/projects/video-games/pokemon-memory.html
+++ b/html/projects/video-games/pokemon-memory.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="stylesheet" href="../../../css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog"></div>
+    <div class="grid grid-blog"  style="height: calc(3vw * 9 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>Pokemon Memory</h1>
     </section>
@@ -38,17 +39,26 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-            <div class="div-column">
-                <p><b>#React</b></p>
+            <div class="div-column" style="width: 70%;">
+                <p><b>Web</b> <b>Online</b> <b>React</b></p>
                 <p>In November 2021, we had a React workshop during my DHE. As I already had learned a bit of JS thanks to freeCodeCamp, I decided to realise a pokemon memory with my partner.</p>
-
-                <img src="../../../img/video-games/pokemon-memory/pm-gameplay1.gif" style="width: 100%;">
-            </div>
-            <div class="div-column" style="width: 40%; margin-left : 10px;">
-                <img src="../../../img/video-games/pokemon-memory/pm-gameplay2.gif">
+                <div class="div-row" style="width: 100%;">
+                    <img src="../../../img/video-games/pokemon-memory/pm-gameplay1.gif" style="width: 49%;">
+                    <img src="../../../img/video-games/pokemon-memory/pm-gameplay2.gif" style="width: 49%;">
+                </div>
                 <p>The website is in english and is responsive. There is a first tab to explain the game and then the game itself. The goal is to discover as much pairs as you can in 60 seconds. The pairs of pokemon that you find will go into your pokedex. The aim ? To catch them all !</p>
                 <p>I am really proud of this funny game and consider this workshop a success.</p>
-                <a class="btn1" href="https://pokemon-memory-online.netlify.app/" target="_blank">Discover the game</a>
+            </div>
+
+            <div class="div-column" style="width: 30%; margin-left : 50px;">
+                <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                    <div class="project-window-navbar">
+                        <p class="project-window-title" id="project-id">PLAY</p>
+                    </div>
+                    <div class="project-window-content" style="margin-top: 40px; width: fit-content;">
+                        <a class="external-link" href="https://pokemon-memory-online.netlify.app/" target="_blank">Discover the game</a>
+                    </div>
+                </div>
             </div>
     </section>
 
