--- a/html/projects/video-games/protectors-of-pomelo.html
+++ b/html/projects/video-games/protectors-of-pomelo.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="stylesheet" href="../../../css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -38,33 +39,34 @@
 <!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
 
     <section id="blog-section" class="div-row">
-            <div class="div-column" style="width: 70%;">
-                <p><b>#Tower Defense</b> <b>#Polynesia</b></p>
-                <p>When I started my internship at TavroxGames I first worked on the prototype of a game named Protectors of pomelo. It's a tower defense game on the theme of Polynesian islands in the Pacific.</p>
-                <p>This was my first project in a professional context and I learned a lot. The architecture of the game, the way to call objects, the whole organisation was way more thorough than in the jams I was used to. Of course, at first it was pretty scary but I got used to it and looking back those first months were when I learned the most.</p>
-
-                
-                <img src="../../../img/video-games/protectors-of-pomelo/pop-gameplay2.gif" style="width: 100%;">
-
-                <div class="div-row" style="width: 100%;">
-                    <img src="../../../img/video-games/protectors-of-pomelo/pop-gameplay.gif" style="width: 49%;">
-                    <img src="../../../img/video-games/protectors-of-pomelo/pop-interstitial.jpg" style="width: 49%;">
-                </div>
-                <div class="div-row" style="width: 100%;">
-                    <img src="../../../img/video-games/protectors-of-pomelo/pop-mad-editor.gif" style="width: 49%;">
-                    <div class="div-column" style="width: 49%;">
-                        <p>I helped on a lot of aspects of the game and later on even worked on a map editor to make islands from the game. This would simplify the task for level designers, let them avoid the whole Unity interface.</p>
-                        <p>I have very good memories of Protectors of pomelo and I hope it will get to be published one day.</p>
-                    </div>
-                </div>
-
+        <div class="div-column" style="width: 70%;">
+            <p><b>2022</b> <b>TavroxGames</b> <b>Unity</b> <b>DOTween</b> <b>OdinInspector</b></p>
+            <p>When I started my internship at TavroxGames I first worked on the prototype of a game named Protectors of pomelo. It's a tower defense game on the theme of Polynesian islands in the Pacific.</p>
+            <p>This was my first project in a professional context and I learned a lot. The architecture of the game, the way to call objects, the whole organisation was way more thorough than in the jams I was used to. Of course, at first it was pretty scary but I got used to it and looking back those first months were when I learned the most.</p>
+            <img src="../../../img/video-games/protectors-of-pomelo/pop-gameplay2.gif" style="width: 100%;">
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/protectors-of-pomelo/pop-gameplay.gif" style="width: 49%;">
+                <img src="../../../img/video-games/protectors-of-pomelo/pop-interstitial.jpg" style="width: 49%;">
             </div>
-            <div class="div-column" style="width: 30%; margin-left : 10px;">
-                <p>2022 | 2m | TavroxGames</p>
-                <p>Tools : Unity, DOTween, OdinInspector</p>
-                <a class="btn1" href="https://tavrox.itch.io/protectors-of-pomelo" target="_blank">Discover the game</a>
-
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/protectors-of-pomelo/pop-mad-editor.gif" style="width: 49%;">
+                <div class="div-column" style="width: 49%;">
+                    <p>I helped on a lot of aspects of the game and later on even worked on a map editor to make islands from the game. This would simplify the task for level designers, let them avoid the whole Unity interface.</p>
+                    <p>I have very good memories of Protectors of Pomelo and I hope it will get to be published one day.</p>
+                </div>
             </div>
+        </div>
+
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">PLAY</p>
+                </div>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                    <a class="external-link" href="https://tavrox.itch.io/protectors-of-pomelo" target="_blank">Discover the game</a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="div-row other-projects">
