--- a/html/projects/video-games/those-who-remain.html
+++ b/html/projects/video-games/those-who-remain.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="../../../css/page-specific-project.css">
     <link rel="stylesheet" href="../../../css/pointer.css">
     <link rel="stylesheet" href="../../../css/blog.css">
+    <link rel="stylesheet" href="../../../css/project-window.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
@@ -30,37 +31,39 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog"></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 25 + .1em);"></div>
     <section id="landing-blog-section">
         <h1>Those Who Remain</h1>
     </section>
 
-<!------------------------------------------------------ PHOTOMONTAGES -------------------------------------------->
-
     <section id="blog-section" class="div-row">
-            <div class="div-column">
-                <p>This new game main objective was accessibility. It needed to be playable without sight or/and without hearing. The controls also had to be simple. With my team, we decided to make a Subway-surfer-like in 2D.</p>
-                <p>It was the first time I programed a whole game by myself. I also took care of the level design and the integration of all elements in Unity. The other members of the team either looked for graphic assets online or designed their own to make the backgrounds (the road that goes by), the main character Miraï, the obstacles and the UI elements in the menu. Adrien Dumont did the whole sound design of the game, which was really important for visually impaired and nonsighted people.</p>                
-                <div class="div-row" style="width: 100%;">
-                    <img src="../../../img/video-games/those-who-remain/twr-menu.jpg" style="width: 49%;">
-                    <img src="../../../img/video-games/those-who-remain/twr-menu-settings.jpg" style="width: 49%;">
-                </div>
-                <p>The menu was red by our respective voices to allow the user to move using only their ears. The settings of the game help the player to customise their experience to make it as pleasant as possible. They can also be changed in game through the pause menu.</p>
-                <a class="btn1" href="https://alvina-dr.itch.io/those-who-remain" target="_blank">Discover the game</a>
+        <div class="div-column"  style="width: 70%;">
+            <p><b>2021</b> <b>School project</b> <b>Unity</b></p>
+            <p>This new game main objective was accessibility. It needed to be playable without sight or/and without hearing. The controls also had to be simple. With my team, we decided to make a Subway-surfer-like in 2D.</p>
+            <p>It was the first time I programed a whole game by myself. I also took care of the level design and the integration of all elements in Unity. The other members of the team either looked for graphic assets online or designed their own to make the backgrounds (the road that goes by), the main character Miraï, the obstacles and the UI elements in the menu. Adrien Dumont did the whole sound design of the game, which was really important for visually impaired and nonsighted people.</p>                
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/those-who-remain/twr-menu.jpg" style="width: 49%;">
+                <img src="../../../img/video-games/those-who-remain/twr-menu-settings.jpg" style="width: 49%;">
             </div>
-            <div class="div-column" style="width: 40%; margin-left : 10px;">
-                <div class="div-column" style="width: 100%;">
-                    <div class="div-row" style="width: 100%;">
-                        <img src="../../../img/video-games/those-who-remain/twr-autumn.jpg" style="width: 49%;">
-                        <img src="../../../img/video-games/those-who-remain/twr-summer.jpg" style="width: 49%;">
-                    </div>
-                    <div class="div-row" style="width: 100%;">
-                        <img src="../../../img/video-games/those-who-remain/twr-winter.jpg" style="width: 49%;">
-                        <img src="../../../img/video-games/those-who-remain/twr-spring.jpg" style="width: 49%;">
-                    </div>
-                </div>
-                <img src="../../../img/video-games/those-who-remain/twr-gameplay.gif">
+            <p>The menu was red by our respective voices to allow the user to move using only their ears. The settings of the game help the player to customise their experience to make it as pleasant as possible. They can also be changed in game through the pause menu.</p>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/those-who-remain/twr-autumn.jpg" style="width: 32%;">
+                <img src="../../../img/video-games/those-who-remain/twr-winter.jpg" style="width: 32%;">
+                <img src="../../../img/video-games/those-who-remain/twr-spring.jpg" style="width: 32%;">
             </div>
+            <img src="../../../img/video-games/those-who-remain/twr-gameplay.gif">
+        </div>
+        
+        <div class="div-column" style="width: 30%; margin-left : 50px;">
+            <div class="project-window2" href="./html/index/jeu_video.html" style="height: fit-content; margin: 0;">
+                <div class="project-window-navbar">
+                    <p class="project-window-title" id="project-id">PLAY</p>
+                </div>
+                <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                    <a class="external-link" href="https://alvina-dr.itch.io/those-who-remain" target="_blank">Discover the game</a>
+                </div>
+            </div>
+        </div>
     </section>
 
     <section class="div-row other-projects">
