maj contact and about

--- a/html/projects/video-games/thief-tales.html
+++ b/html/projects/video-games/thief-tales.html
@@ -31,7 +31,7 @@
         </ul>
     </navbar>  
     
-    <div class="grid grid-blog" style="height: calc(3vw * 14 + .1em); "></div>
+    <div class="grid grid-blog" style="height: calc(3vw * 19 + .1em); "></div>
     <section id="landing-blog-section">
         <h1>Thief Tales</h1>
     </section>
@@ -40,6 +40,7 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column" style="width: 70%;">
+            <p><b>2022</b> <b>Game Jam</b> <b>Unity</b></p>
             <p>The second game jam we made in collaboration with ENSEIRB was at the end of my second year of DHE. It led to the creation of Thief Tales a compilation of mini game packed inside a thief story.</p>
             <div class="div-row" style="width: 100%;">
                 <img src="../../../img/video-games/thief-tales/tt-gameplay1.gif" style="width: 49%;">
@@ -51,6 +52,11 @@
             </div>
             <p>I mainly worked on the race game and it was super fun to do because it looked a lot like <a class="link-in-text" href="https://alvina-dr.com/html/projects/video-games/those-who-remain.html">Those Who Remain</a>, a previous game we made in school with some friends. This time it took me way less time and I knew how to proceed from the start.</p>
             <p>I really love this jam and I'm grateful for the people I met through it.</p>
+            <div class="div-row" style="width: 100%;">
+                <img src="../../../img/video-games/thief-tales/team1.jpg" style="width: 32%;">
+                <img src="../../../img/video-games/thief-tales/team2.jpg" style="width: 32%;">
+                <img src="../../../img/video-games/thief-tales/everyone.jpg" style="width: 32%;">
+            </div>
         </div>
 
         <div class="div-column" style="width: 30%; margin-left : 50px;">
