--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 
         <!-- PROJET SECTION -->
         <section id="project-section" style="margin-bottom: 120px;">
-            <div class="div-row project-div">
-                <div class="project-window1" >
+            <div class="div-row project-div" >
+                <div class="project-window1" style="width:80%">
                     <img class="project-window1-image text-zone" id='project-image-a' src="./img/cover-favorite.jpg" />
                     <a class="btn1 project-window-btn-more" id='project-link'>Discover</a>
                     <div class="project-card-data">
@@ -77,10 +77,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="div-column">
+                <div class="div-column" style="width:50%">
                     <div id="project-menu">
                     </div>
-                    <div class="project-window2" href="./html/index/jeu_video.html">
+                    <div class="project-window2" href="./html/index/jeu_video.html" >
                         <div class="project-window-navbar">
                             <p class="project-window-title" id="project-id"></p>
                         </div>
@@ -102,10 +102,10 @@
     <div class="scroll-text-div">
         <div style="width: 10000000px">
             <div class="scroll-text" >
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . CONCEPT ART . PHOTOGRAPHY . WEB DEVELOPMENT .</h5>
+                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
             </div>
             <div class="scroll-text">
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . CONCEPT ART . PHOTOGRAPHY . WEB DEVELOPMENT .</h5>
+                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
             </div>
         </div>
     </div>
