--- a/html/about.html
+++ b/html/about.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/project-window.css">
     <link rel="stylesheet" href="../css/page-about.css">
     <link rel="stylesheet" href="../css/pointer.css">
+    <link rel="stylesheet" href="../css/blog.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -29,20 +30,40 @@
         </ul>
     </navbar>
     
-    <div class="grid grid-about-1"></div>
-    <section id="landing-section">
+    <div class="grid" style="height: calc(3vw * 11 + .1em);"></div>
+    <section>
         <h1>About</h1>
     </section>
 
     <section id="about-me-section" class="div-row">
-        <div>
-            <p>Hi there ! I'm a french student, working at TavroxGames in Toulouse. I enjoy making video games and programming in general. Big Doctor Who and Percy Jackson fan, I also love playing narrative video games such as Life Is Strange, Disco Elysium or Detroit Become Human. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p>    
+        <div class="div-column" style="width:70%; margin-right: 30px;">
+            <p>Hi there ! I'm a french student, working at <a class="link-in-text" href="https://tavroxgames.com/">TavroxGames</a> in Toulouse. I enjoy making video games and programming in general. Big Doctor Who and Percy Jackson fan, I also love playing narrative video games such as Life Is Strange, Disco Elysium or Detroit Become Human. Writing stories and learning are two big aspects of my life and I think that both these things can mix in video games and that's something I really want to convey in what I do.</p>    
             <p>I started making video games when I was eleven on RPG Maker (Pokemon fan games precisely) and it was wonderful. For a while it was a big hobby and everytime I had access to my dad's computer I would try and make maps, put more stuff on my tilesets, animate my characters or try and modify the code (which was ruby) as well as I could. This made me discover Photoshop and it quickly also became a hobby.</p>
             <p>In high school I started using Unity trying to make a Pokemon 3D game (which is sort of a fixation by now right ?). This led to me discovering C4D and trying my hand at 3D modeling and so. Later on, when I had to choose what I wanted to do in life and what I would study, I had the sudden revelation that I indeed wanted to make video games. And most of all that it was possible.</p>
             <p>So here I am now, really, really making video games and learning to at school. Oh by the way, my name is Alvina Damasio--Razafiarizaka (Damasio, Portuguese, father's side, Razafiarizaka, Malagasy, mother's side) and I'm from France, Périgueux, a little city two hours away from Bordeaux. And I still think about making a Pokemon game from time to time.</p>
+            <div class="div-row" style="width: 100%; margin: 0;">
+                <div class="div-column" style="width: 60%; margin-left: 0;">
+                    <h3>Experience</h3>
+                    <p>I studied in Bordeaux for two years and got my <a class="link-in-text" href="https://www.mmibordeaux.com/">Diploma of Higher Education in Multimedia and Internet</a>. Then I started a <a class="link-in-text" href="https://miami.iut-tarbes.fr/">Vocational Degree about video games and Interactive Media</a> in Tarbes, while working in Toulouse. I later entend to continue with a master in video game programming, hopefully at ENJMIN in Angoulême (wink wink).</p>    
+                    <p>Here are my English and French curriculum. Don't worry, no download it opens in a blank page :D</p>
+                </div>
+                <div class="div-column" style="width: 40%; margin-left : 50px;">
+                    <div class="project-window2" href="./html/index/jeu_video.html" style="height: 200px; margin: 0;">
+                        <div class="project-window-navbar">
+                            <p class="project-window-title" id="project-id">CURRICULUM</p>
+                        </div>
+                        <div class="project-window-content" style="margin-top: 40px; width: fit-content; display: flex; flex-direction: column;">
+                            <a class="external-link" href="../img/Alvina Damasio--Razafiarizaka - Programmeur gameplay CV.pdf" target="_blank">FRENCH VERSION</a>
+                            <a class="external-link" href="../img/Alvina Damasio--Razafiarizaka - Gameplay programmer CV.pdf" target="_blank">ENGLISH VERSION</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+
         </div>
-        <div class="project-window1">
-            <img class="project-window1-image" src="../img/about/profile-pic2.jpg" alt="">
+        <div class="project-window1" style="width:30%">
+            <img class="project-window1-image" src="../img/about/profile-pic2.jpg">
             <div class="project-card-data">
                 <div class="project-card-content">
                     <p id="project-nav-title" class="project-window-title" >Hello :)</p>
@@ -53,22 +74,16 @@
     </section>
 
     <section id="experience-section" style="margin-bottom: 70px;">
-        <h3>Experience</h3>
-        <p>I studied in Bordeaux for two years and got my Diploma of Higher Education in Multimedia and Internet. Then I started a Vocational Degree about video games and interactive media in Tarbes, while working in Toulouse. I later entend to continue with a master in video game programming, hopefully at ENJMIN in Angoulême (wink wink).</p>    
-        <p>Here are my English and French curriculum. Don't worry, no download it opens in a blank page :D</p>
-        <div class="div-row">
-            <a class="btn1" href="../img/Alvina Damasio--Razafiarizaka - Gameplay programmer CV.pdf" target="_blank">English curriculum</a>
-            <a class="btn1" href="../img/Alvina Damasio--Razafiarizaka - Programmeur gameplay CV.pdf" target="_blank">French curriculum</a>
-        </div>
+
     </section>
 
     <div class="scroll-text-div">
         <div style="width: 10000000px">
             <div class="scroll-text" >
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . CONCEPT ART . PHOTOGRAPHY . WEB DEVELOPMENT .</h5>
+                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
             </div>
             <div class="scroll-text">
-                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . CONCEPT ART . PHOTOGRAPHY . WEB DEVELOPMENT .</h5>
+                <h5>&nbsp;<span>GAMEPLAY PROGRAMMING</span> . GAME DESIGN . TOOL DEVELOPMENT . PROTOTYPING . WEB DEVELOPMENT .</h5>
             </div>
         </div>
     </div>
